package com.example.parkingsystem;

public enum CarType {
    COMPACT,
    SUV
}